# quarimo

./: .gitignore  LICENSE  README.md  conftest.py  mkdocs.yml  pyproject.toml  qed.py  references.bib  requirements.txt
.github/workflows/: build.yml  tests.yml
data/: iqtree_capsid.ufboot  iqtree_dnapol.ufboot  iqtree_rnapol1.ufboot
docs/: api.md  euler.py  index.md  naming_conventions.md  paralog_benchmarks.py  release_notes.md  throughput_benchmarks.py
docs/benchmark_results/: paralog_cuda_20260316.json  paralog_provner_20260316.json  throughput_ch5_20260319.json  throughput_fe1_20260319.json  throughput_provner_20260319.json  throughput_stumpy_20260319.json  throughput_stumpy_20260323.json
quarimo/: __init__.py  _backend.py  _consensus_graph.py  _context.py  _cpu_kernels.py  _cuda_kernels.py  _forest.py  _io.py  _kernel_data.py  _logging.py  _mlx_kernels.py  _paralog.py  _quartet_kernel_unified.py  _quartets.py  _results.py  _rng_cuda.py  _tree.py  _utils.py
scripts/: benchmark.py
tests/: bench_forest.py  bench_paralog.py  bench_throughput.py  examples_quartets.py  test_consensus_graph.py  test_cpu_kernels.py  test_cuda_kernels.py  test_cuda_logging.py  test_deduplication.py  test_forest.py  test_forest_groups.py  test_io.py  test_kernel_agreement.py  test_logging.py  test_mlx_kernels.py  test_paralog_assignment.py  test_paralog_csr.py  test_paralog_delta_kernel.py  test_paralog_optimizer.py  test_paralog_parser.py  test_polytomy_strategy.py  test_quartets.py  test_tree.py
tests/data/: basic_branch_distances.csv  basic_global_to_local.csv  basic_namespace.csv
tests/trees/: asymmetric_4leaf.tree  balanced_4leaf.tree  basic_collection.trees  caterpillar_5leaf.tree  star_4leaf.tree  trifurcating_internal.tree  two_leaf.tree
