[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quarimo"
version = "0.1.0"
description = "High-performance phylogenetic tree analysis with bulk quartet topology queries"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [{ name = "Russell Neches", email = "russell@vort.org" }]

maintainers = [{ name = "Russell Neches", email = "russell@vort.org" }]

keywords = [
  "phylogenetics",
  "bioinformatics",
  "quartet",
  "tree-analysis",
  "computational-biology",
  "newick",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

# Core dependencies
dependencies = ["numpy>=1.20.0"]

# Optional dependencies for different features
[project.optional-dependencies]
# GPU acceleration support
gpu = [
  "numba>=0.55.0", # Includes CUDA support
]

# CPU parallelization (without GPU)
parallel = ["numba>=0.55.0"]

# System information (for enhanced logging)
system-info = ["psutil>=5.8.0"]

# Development dependencies
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=3.0.0",
  "black>=22.0.0",
  "isort>=5.10.0",
  "flake8>=4.0.0",
  "mypy>=0.950",
  "build>=0.7.0",
  "twine>=4.0.0",
]

# Documentation dependencies
# docs = [
#     "sphinx>=4.0.0",
#     "sphinx-rtd-theme>=1.0.0",
#     "sphinx-autodoc-typehints>=1.18.0",
# ]

# All optional dependencies
all = ["numba>=0.55.0", "psutil>=5.8.0"]

# TODO: Add project URLs when repository is public
# [project.urls]
# Homepage = "https://github.com/yourusername/phylo-tree-analysis"
# Documentation = "https://phylo-tree-analysis.readthedocs.io"
# Repository = "https://github.com/yourusername/phylo-tree-analysis"
# Issues = "https://github.com/yourusername/phylo-tree-analysis/issues"
# Changelog = "https://github.com/yourusername/phylo-tree-analysis/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = ["/*.py", "/tests", "README.md", "LICENSE"]
exclude = ["/__pycache__", "/*.pyc", "/.pytest_cache", "/.mypy_cache"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | _build
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-v",
  "--strict-markers",
  "--strict-config",
  "--cov=.",
  # "--cov-report=term-missing",
  # "--cov-report=html",
  # "--cov-report=xml",
]
filterwarnings = ["ignore::numba.core.errors.NumbaPerformanceWarning"]

# mypy configuration
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false    # Gradually enable
disallow_any_generics = false    # Gradually enable
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["numba.*", "psutil.*"]
ignore_missing_imports = true

# Coverage configuration
[tool.coverage.run]
source = ["."]
omit = ["tests/*", "setup.py", "*/__pycache__/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]
